Primer intento de filtrado de datos de las líneas

--- a/Image.ipynb
+++ b/Image.ipynb
@@ -491,6 +491,136 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Hacemos un filtro de outliers y hacemos la curva más smooth."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.interpolate import make_interp_spline\n",
+    "\n",
+    "# Suavizar la serie de datos de línea\n",
+    "line_dataseries_smooth = []\n",
+    "for series in line_dataseries_escal:\n",
+    "    x_values = [point[0] for point in series]\n",
+    "    y_values = [point[1] for point in series]\n",
+    "    \n",
+    "    # Crear una spline para suavizar la curva\n",
+    "    spline = make_interp_spline(x_values, y_values)\n",
+    "    \n",
+    "    # Generar nuevos puntos para una curva más suave\n",
+    "    x_smooth = np.linspace(min(x_values), max(x_values), 500)\n",
+    "    y_smooth = spline(x_smooth)\n",
+    "    \n",
+    "    line_dataseries_smooth.append(list(zip(x_smooth, y_smooth)))\n",
+    "\n",
+    "# Visualizar la serie de datos suavizada\n",
+    "fig, axes = plt.subplots(1, 2, figsize=(20, 10))\n",
+    "\n",
+    "# Plot the smoothed line data series\n",
+    "axes[0].set_title(result_json.get('title', 'Smoothed Line Data Series'))\n",
+    "axes[0].set_xlabel(result_json.get('x_label', 'X-axis'))\n",
+    "axes[0].set_ylabel(result_json.get('y_label', 'Y-axis'))\n",
+    "for series in line_dataseries_smooth:\n",
+    "    x_values = [point[0] for point in series]\n",
+    "    y_values = [point[1] for point in series]\n",
+    "    axes[0].plot(x_values, y_values)\n",
+    "if 'legend' in result_json:\n",
+    "    axes[0].legend(result_json['legend'])\n",
+    "\n",
+    "# Display the example image\n",
+    "example_image = cv2.imread(image_path)\n",
+    "example_image_rgb = cv2.cvtColor(example_image, cv2.COLOR_BGR2RGB)\n",
+    "axes[1].imshow(example_image_rgb)\n",
+    "axes[1].set_title('Example Image')\n",
+    "axes[1].axis('off')\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Y ahora elimino los puntos límites."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remove_outliers(data, threshold=1.5):\n",
+    "    \"\"\"\n",
+    "    Remove outliers from a list of data points using the IQR method.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    - data: List of data points (tuples).\n",
+    "    - threshold: Multiplier for the IQR to define outliers.\n",
+    "    \n",
+    "    Returns:\n",
+    "    - List of data points with outliers removed.\n",
+    "    \"\"\"\n",
+    "    if not data:\n",
+    "        return data\n",
+    "    \n",
+    "    # Extract y-values\n",
+    "    y_values = [point[1] for point in data]\n",
+    "    \n",
+    "    # Calculate Q1 (25th percentile) and Q3 (75th percentile)\n",
+    "    Q1 = np.percentile(y_values, 25)\n",
+    "    Q3 = np.percentile(y_values, 75)\n",
+    "    \n",
+    "    # Calculate IQR\n",
+    "    IQR = Q3 - Q1\n",
+    "    \n",
+    "    # Define bounds for outliers\n",
+    "    lower_bound = Q1 - threshold * IQR\n",
+    "    upper_bound = Q3 + threshold * IQR\n",
+    "    \n",
+    "    # Filter out outliers\n",
+    "    filtered_data = [point for point in data if lower_bound <= point[1] <= upper_bound]\n",
+    "    \n",
+    "    return filtered_data\n",
+    "\n",
+    "# Remove outliers from the smoothed line data series\n",
+    "line_dataseries_no_outliers = [remove_outliers(series) for series in line_dataseries_smooth]\n",
+    "\n",
+    "# Visualizar la serie de datos sin outliers\n",
+    "fig, axes = plt.subplots(1, 2, figsize=(20, 10))\n",
+    "\n",
+    "# Plot the line data series without outliers\n",
+    "axes[0].set_title(result_json.get('title', 'Line Data Series Without Outliers'))\n",
+    "axes[0].set_xlabel(result_json.get('x_label', 'X-axis'))\n",
+    "axes[0].set_ylabel(result_json.get('y_label', 'Y-axis'))\n",
+    "for series in line_dataseries_no_outliers:\n",
+    "    x_values = [point[0] for point in series]\n",
+    "    y_values = [point[1] for point in series]\n",
+    "    axes[0].plot(x_values, y_values)\n",
+    "if 'legend' in result_json:\n",
+    "    axes[0].legend(result_json['legend'])\n",
+    "\n",
+    "# Display the example image\n",
+    "example_image = cv2.imread(image_path)\n",
+    "example_image_rgb = cv2.cvtColor(example_image, cv2.COLOR_BGR2RGB)\n",
+    "axes[1].imshow(example_image_rgb)\n",
+    "axes[1].set_title('Example Image')\n",
+    "axes[1].axis('off')\n",
+    "\n",
+    "plt.show()\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Visualize the results:"
    ]
   },
