he añadido cosas

--- a/Image.ipynb
+++ b/Image.ipynb
@@ -115,7 +115,7 @@
     "image_name = 'sample_image.png'\n",
     "\n",
     "# Manually define the image path\n",
-    "image_path = './data/DemoImages/page_1_figure_1.jpeg'\n",
+    "image_path = './data/DemoImages/image6.png'\n",
     "\n",
     "# Define the output path using output_dir and the image name\n",
     "output_path = os.path.join(output_dir, f\"{image_name}\")"
