--- a/notebooks/notebook.ipynb
+++ b/notebooks/notebook.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,22 +23,35 @@
    "metadata": {},
    "source": [
     "## Configuración de Google Cloud Storage\n",
-    "Primero, configuramos las credenciales y el nombre del bucket donde guardaremos los datos."
+    "Primero, configuramos el nombre del bucket donde guardaremos los datos."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from google.cloud import storage\n",
-    "import os\n",
-    "\n",
     "# Configuración de Google Cloud Storage\n",
-    "os.environ['GOOGLE_APPLICATION_CREDENTIALS'] = 'path/to/your/credentials.json'\n",
     "bucket_name = 'your-bucket-name'\n",
     "file_name = 'synthetic_data.csv'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Crear el Bucket en Google Cloud Storage\n",
+    "Creamos el bucket en GCS si no existe."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!gsutil mb gs://{bucket_name}/"
    ]
   },
   {
@@ -51,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,21 +82,25 @@
    "metadata": {},
    "source": [
     "## Subir el Archivo a Google Cloud Storage\n",
-    "Finalmente, subimos el archivo CSV generado a nuestro bucket en GCS."
+    "Finalmente, subimos el archivo CSV generado a nuestro bucket en GCS usando `gsutil`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Copying file://synthetic_data.csv [Content-Type=text/csv]...\n",
+      "AccessDeniedException: 403 The billing account for the owning project is disabled in state closed\n"
+     ]
+    }
+   ],
    "source": [
-    "client = storage.Client()\n",
-    "bucket = client.bucket(bucket_name)\n",
-    "blob = bucket.blob(file_name)\n",
-    "blob.upload_from_filename(file_name)\n",
-    "\n",
-    "print(f'Datos sintéticos guardados en gs://{bucket_name}/{file_name}')"
+    "!gsutil cp {file_name} gs://{bucket_name}/"
    ]
   }
  ],
