Docker cpu in root

--- a/Notebooks/RUN.ipynb
+++ b/Notebooks/RUN.ipynb
@@ -51,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!docker run --rm --name cic-container --runtime=nvidia -v ./data:/CICProject/data cic\n"
+    "!docker run --rm --name cic-container --runtime=nvidia -v ./data:/CICProject/data cicpu\n"
    ]
   },
   {
