--- a/Notebooks/Image.ipynb
+++ b/Notebooks/Image.ipynb
@@ -65,7 +65,7 @@
     "# Import matplotlib for plotting\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from AI.Gemini.CEImage import GeminiImageProcessor\n",
+    "from MLmanager.Gemini.CEImage import GeminiImageProcessor\n",
     "\n"
    ]
   },
